[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thermofeel"
description = "A library to calculate human thermal comfort indexes"
readme = "README.md"
authors = [
    { name = "European Centre for Medium-Range Weather Forecasts (ECMWF)", email = "software@ecmwf.int" }
]
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: OS Independent",
]
keywords = ["tool"]
dependencies = [
    "numpy",
]
requires-python = ">=3.10"
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/ecmwf/thermofeel"

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.setuptools]
include-package-data = true
zip-safe = true

[tool.setuptools.dynamic]
version = { attr = "thermofeel.__version__" }

[tool.setuptools.packages.find]
where = ["."]

# Single linter + formatter, replacing flake8 + isort + black.
[tool.ruff]
# 88 columns matches the formatting the codebase already uses.
line-length = 88
target-version = "py310"

[tool.ruff.lint]
# Default rules (Pyflakes "F" + pycodestyle "E4"/"E7"/"E9") plus import sorting
# ("I"), which together cover what flake8 + isort previously enforced.
extend-select = ["I"]